--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "@graphql-codegen/cli": "^2.0.1",
     "@graphql-codegen/typescript": "^2.0.0",
     "@graphql-codegen/typescript-resolvers": "^2.0.0",
-    "@prisma/client": "^2.28.0",
+    "@prisma/client": "^2.29.1",
     "apollo-server": "^2.25.1",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
@@ -22,7 +22,12 @@
   "devDependencies": {
     "@types/graphql": "14.5.0",
     "@types/node": "^16.4.12",
-    "prisma": "^2.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.0",
+    "prisma": "^2.29.1",
     "ts-node": "^10.0.0",
     "ts-node-dev": "1.1.6",
     "typescript": "^4.3.2"
