--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -1,6 +1,6 @@
-schema: ./src/schema/**/*.graphql
+schema: ./src/schemas/typeDefs.graphql
 generates:
-  ./src/generated/resolvers-types.ts:
+  src/generated/resolver-types.ts:
     plugins:
-      - typescript
-      - typescript-resolvers
+      - "typescript"
+      - "typescript-resolvers"
