--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,8 @@
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "5.1.7",
     "graphql": "^15.5.0",
+    "graphql.macro": "^1.4.2",
+    "immer": "^9.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -23,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "download-schema": "npx apollo service:download --endpoint=http://localhost:5000/ graphql-schema.json"
   },
   "eslintConfig": {
     "extends": [
